# flowsql

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.full.yml  docker-compose.yml  start.sh  start_web.sh
config/: deploy-multi.yaml  deploy-single.yaml  docker-compose-clickhouse.yml  docker-compose-postgres.yml  docker-compose.yml  gateway.example.yaml  gateway.yaml  gateway_test_mysql.yaml  single.yaml
config/clickhouse/: config.xml  default-user.xml  users.xml
database/mysql/data/: #ib_16384_0.dblwr  auto.cnf  ca-key.pem  ca.pem  ib_buffer_pool
docs/: commands.md  framework.md
meta/: flowsql_meta.db
samples/cpp_operator/: CMakeLists.txt  README.md  plugin_exports.cpp  sample_operator.cpp  sample_operator.h
src/: CMakeLists.txt  subjects.cmake
src/app/: CMakeLists.txt  main.cpp
src/common/: error_code.h  loader.hpp  log.h  span.h
src/framework/: CMakeLists.txt
src/framework/core/: channel_adapter.cpp  channel_adapter.h  dataframe_channel.cpp  dataframe_channel.h  memory_channel.cpp  memory_channel.h  passthrough_operator.cpp  passthrough_operator.h  pipeline.cpp  plugin_registry.cpp  plugin_registry.h  sql_parser.cpp  sql_parser.h
src/framework/interfaces/: ibinaddon_host.h  ibridge.h  ichannel.h  ichannel_registry.h  idatabase_channel.h  idatabase_factory.h  ioperator.h  ioperator_catalog.h  ioperator_registry.h  irouter_handle.h  itask_store.h
src/frontend/: index.html  package-lock.json  package.json
src/frontend/src/: App.vue  main.js  style.css
src/frontend/src/api/: index.js
src/frontend/src/components/: Sidebar.vue
src/frontend/src/router/: index.js
src/frontend/src/views/: Channels.vue  Dashboard.vue  Operators.vue  Tasks.vue
src/plugins/example/: memory_channel.h
src/plugins/npi/: CMakeLists.txt  bitmapmatch.cpp  bitmapmatch.h  config.cpp  config.h  engine.cpp  engine.h  enumeratematch.cpp  enumeratematch.h  iprotocol.h  irecognizer.h  layer.cpp  layer.h  model.cpp  model.h  npi.cpp  npi.h  regexmatch.cpp  regexmatch.h
src/plugins/npi/conf/: protocols.yml
src/plugins/testdata/: CMakeLists.txt  plugin_register.cpp  testdata_plugin.cpp  testdata_plugin.h
src/python/: requirements.txt
src/python/flowsql/: arrow_codec.py  control_client.py  operator_base.py  operator_registry.py  worker.py
src/services/binaddon/: CMakeLists.txt  binaddon_host_plugin.cpp  binaddon_host_plugin.h  binaddon_operator_proxy.h  plugin_register.cpp
src/services/bridge/: CMakeLists.txt  arrow_ipc_serializer.cpp  arrow_ipc_serializer.h  bridge_plugin.cpp  bridge_plugin.h  control_message.cpp  control_message.h  control_protocol.h  control_server.cpp  control_server.h  plugin_register.cpp  python_operator_bridge.cpp  python_operator_bridge.h  python_process_manager.cpp  python_process_manager.h  shared_memory_guard.h
src/services/catalog/: CMakeLists.txt  catalog_plugin.cpp  catalog_plugin.h  plugin_register.cpp
src/services/catalog/builtin/: concat_operator.cpp  concat_operator.h  hstack_operator.cpp  hstack_operator.h
src/services/database/: CMakeLists.txt  arrow_adapters.h  arrow_db_session.h  capability_interfaces.h  connection_pool.h  database_channel.cpp  database_channel.h  database_plugin.cpp  database_plugin.h  db_session.h  idb_driver.h  plugin_register.cpp  relation_adapters.h  relation_db_session.h  row_based_db_driver_base.cpp  row_based_db_driver_base.h
src/services/database/drivers/: clickhouse_driver.cpp  clickhouse_driver.h  mysql_driver.cpp  mysql_driver.h  postgres_driver.cpp  postgres_driver.h  sqlite_driver.cpp  sqlite_driver.h
src/services/gateway/: CMakeLists.txt  config.cpp  config.h  gateway_plugin.cpp  gateway_plugin.h  plugin_register.cpp  route_table.cpp  route_table.h  service_client.cpp  service_client.h  service_manager.cpp  service_manager.h
src/services/router/: CMakeLists.txt  plugin_register.cpp  router_agency_plugin.cpp  router_agency_plugin.h
src/services/scheduler/: CMakeLists.txt  plugin_register.cpp  scheduler_plugin.cpp  scheduler_plugin.h
src/services/task/: CMakeLists.txt  plugin_register.cpp  task_plugin.cpp  task_plugin.h
src/services/web/: CMakeLists.txt  main.cpp  web_plugin.cpp  web_plugin.h  web_plugin_register.cpp  web_server.cpp  web_server.h
src/services/web/db/: database.cpp  database.h  schema.sql
src/services/web/static/: index.html
src/services/web/static/assets/: index-Bd7acre8.css  index-DZMD_2xK.js
src/tests/data/packets/: gre-packets.pcap  gtp-packets.pcap  https-packets-much.pcap  https-packets.pcap  icmp-packets.pcap  ipv6option-packets.pcap  pop3ssl-packets.pcap  test-packets.pcap
src/tests/test_bridge/: CMakeLists.txt  main.cpp
src/tests/test_builtin/: CMakeLists.txt  test_builtin.cpp
src/tests/test_builtin/fixtures/: fixture_bad_abi.cpp  fixture_cpp_operator.cpp
src/tests/test_database/: CMakeLists.txt  test_clickhouse.cpp  test_connection_pool.cpp  test_database_manager.cpp  test_mysql.cpp  test_plugin_e2e.cpp  test_postgres.cpp  test_session_e2e.cpp  test_sqlite.cpp
src/tests/test_framework/: CMakeLists.txt  main.cpp
src/tests/test_mysql_driver/: CMakeLists.txt  test_mysql_driver.cpp
src/tests/test_npi/: CMakeLists.txt  main.cpp
src/tests/test_router/: CMakeLists.txt  test_router.cpp
src/tests/test_scheduler_e2e/: CMakeLists.txt  test_scheduler_e2e.cpp
src/tests/test_task/: CMakeLists.txt  test_task.cpp
tasks/: lessons.md  product_backlog.md
tasks/sprints/sprint10/: design.md  planning.md  review.md
tasks/sprints/sprint11/: design.md  planning.md  retrospective.md  review.md
tasks/sprints/sprint4/: design.md  planning.md  retrospective.md  review.md
tasks/sprints/sprint5/: code_design_review.md  design.md  planning.md
tasks/sprints/sprint6/: design.md  planning.md  (+5 more)
thirdparts/arrow/: arrow-config.cmake
thirdparts/gflags/: gflags-config.cmake
thirdparts/glog/: glog-config.cmake
thirdparts/httplib/: httplib-config.cmake
thirdparts/hyperscan/: hyperscan-config.cmake
thirdparts/rapidjson/: rapidjson-config.cmake
thirdparts/sqlite/: sqlite-config.cmake
thirdparts/yaml-cpp/: yaml-config.cmake
(+124 files in other folders)
